# bevy-golf

./: Cargo.toml
assets/data/: tiles.ron
assets/models/: hole.blend
assets/textures/: checker-noise.png.kra
src/: ball.rs  camera.rs  hello.rs  main.rs
src/proc/: dynamic_mesh.rs  mesh_maker.rs  mod.rs  tile.rs  tile_definitions.rs
